syntax = "proto3";

option go_package = "github.com/jhuggart/repro-mesh-prob/customers";

message CustomerIdentifier{
  string ID = 1;
}

message CustomerResponse{
  string ID = 1;
  string Email = 2;
  string FirstName = 3;
  string LastName = 4;
}

service Customers{
  rpc Get(CustomerIdentifier) returns (CustomerResponse){
  }
}